[tool.poetry]
name = "dydoc"
version = "0.1.0"
description = "Convert Dyalog's XHTML docs to mkdocs and Markdown"
authors = ["Stefan Kruger <stefan@dyalog.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.4.1"
markdownify = "^0.11.6"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
mkdocs = "^1.5.2"
types-pyyaml = "^6.0.12.11"
types-beautifulsoup4 = "^4.12.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
